changes to sorting files and adding length sort