@@ -12,7 +12,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
 class AuthorPostSorterTest {
-    UserPost userPost1 = new UserPost("Joe Bloggs",
+    UserPost userPost1 = new UserPost("Jane Smith",
             OffsetDateTime.of(2020, 1, 3, 7, 12, 3, 0, ZoneOffset.UTC),
             "Hello World!", 2);
 
@@ -20,7 +20,7 @@ class AuthorPostSorterTest {
             OffsetDateTime.of(2020, 1, 3, 8, 53, 34, 0, ZoneOffset.UTC),
             "Another example post.", 1);
 
-    UserPost userPost3 = new UserPost("Jane Smith",
+    UserPost userPost3 = new UserPost("Joe Bloggs",
             OffsetDateTime.of(2020, 3, 12, 13, 22, 12, 0, ZoneOffset.UTC),
             "An example of a post \nwith lines breaks.", 3);
 
@@ -43,8 +43,8 @@ class AuthorPostSorterTest {
 
     @Test
     void sort_1ItemList_1ItemList() {
-        List<UserPost> inputList = Arrays.asList(userPost1);
-        List<UserPost> expected = Arrays.asList(userPost1);
+        List<UserPost> inputList = List.of(userPost1);
+        List<UserPost> expected = List.of(userPost1);
 
         List<UserPost> actual = new AuthorPostSorter().sort(inputList, SortOrder.ASC);
 
@@ -54,7 +54,7 @@ class AuthorPostSorterTest {
     @Test
     void sort_unsorted3Items_sorted3Items() {
         List<UserPost> inputList = Arrays.asList(userPost1, userPost2, userPost3);
-        List<UserPost> expected = Arrays.asList(userPost3, userPost1, userPost2);
+        List<UserPost> expected = Arrays.asList(userPost2, userPost3, userPost1);
 
         List<UserPost> actual = new AuthorPostSorter().sort(inputList, SortOrder.ASC);
 
@@ -63,7 +63,7 @@ class AuthorPostSorterTest {
 
     @Test
     void sort_unsorted3Lower_sorted3Lower() {
-        UserPost userPost1 = new UserPost("joe bloggs",
+        UserPost userPost1 = new UserPost("jane smith",
                 OffsetDateTime.of(2020, 1, 3, 7, 12, 3, 0, ZoneOffset.UTC),
                 "Hello World!", 2);
 
@@ -71,12 +71,12 @@ class AuthorPostSorterTest {
                 OffsetDateTime.of(2020, 1, 3, 8, 53, 34, 0, ZoneOffset.UTC),
                 "Another example post.", 1);
 
-        UserPost userPost3 = new UserPost("jane smith",
+        UserPost userPost3 = new UserPost("joe bloggs",
                 OffsetDateTime.of(2020, 3, 12, 13, 22, 12, 0, ZoneOffset.UTC),
                 "An example of a post \nwith lines breaks.", 3);
 
         List<UserPost> inputList = Arrays.asList(userPost1, userPost2, userPost3);
-        List<UserPost> expected = Arrays.asList(userPost3, userPost1, userPost2);
+        List<UserPost> expected = Arrays.asList(userPost2, userPost3, userPost1);
 
         List<UserPost> actual = new AuthorPostSorter().sort(inputList, SortOrder.ASC);
 
@@ -94,7 +94,7 @@ class AuthorPostSorterTest {
     }
 
     @Test
-    void sort_unsorted2Num_sorted2Num() {
+    void sort_unsorted3Num_sorted3Num() {
         UserPost userPost1 = new UserPost("2",
                 OffsetDateTime.of(2020, 1, 3, 7, 12, 3, 0, ZoneOffset.UTC),
                 "Hello World!", 2);
@@ -109,6 +109,50 @@ class AuthorPostSorterTest {
 
         List<UserPost> inputList = Arrays.asList(userPost1, userPost2, userPost3);
         List<UserPost> expected = Arrays.asList(userPost3, userPost1, userPost2);
+
+        List<UserPost> actual = new AuthorPostSorter().sort(inputList, SortOrder.ASC);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void sort_unsorted3Surnames_sorted3Surnames() {
+        UserPost userPost1 = new UserPost("Joe Blogg",
+                OffsetDateTime.of(2020, 1, 3, 7, 12, 3, 0, ZoneOffset.UTC),
+                "Hello World!", 2);
+
+        UserPost userPost2 = new UserPost("Jack Collier",
+                OffsetDateTime.of(2020, 1, 3, 8, 53, 34, 0, ZoneOffset.UTC),
+                "Another example post.", 1);
+
+        UserPost userPost3 = new UserPost("Arwell Andy",
+                OffsetDateTime.of(2020, 3, 12, 13, 22, 12, 0, ZoneOffset.UTC),
+                "An example of a post \nwith lines breaks.", 3);
+
+        List<UserPost> inputList = Arrays.asList(userPost1, userPost2, userPost3);
+        List<UserPost> expected = Arrays.asList(userPost3, userPost1, userPost2);
+
+        List<UserPost> actual = new AuthorPostSorter().sort(inputList, SortOrder.ASC);
+
+        assertEquals(expected, actual);
+    }
+
+    @Test
+    void sort_unsorted3SurnamesFirstnames_sorted3SurnamesFirstnames() {
+        UserPost userPost1 = new UserPost("Joe Bloggs",
+                OffsetDateTime.of(2020, 1, 3, 7, 12, 3, 0, ZoneOffset.UTC),
+                "Hello World!", 2);
+
+        UserPost userPost2 = new UserPost("Joseph",
+                OffsetDateTime.of(2020, 1, 3, 8, 53, 34, 0, ZoneOffset.UTC),
+                "Another example post.", 1);
+
+        UserPost userPost3 = new UserPost("Jack Collier",
+                OffsetDateTime.of(2020, 3, 12, 13, 22, 12, 0, ZoneOffset.UTC),
+                "An example of a post \nwith lines breaks.", 3);
+
+        List<UserPost> inputList = Arrays.asList(userPost1, userPost2, userPost3);
+        List<UserPost> expected = Arrays.asList(userPost1, userPost3, userPost2);
 
         List<UserPost> actual = new AuthorPostSorter().sort(inputList, SortOrder.ASC);
 
